# pkgEvents

pkgevents/: setup.cfg
pkgevents/src/pkgevents/: __init__.py  cc.py  eor.py
pkgevents/src/pkgevents.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
