[metadata]
name = pkgevents
version = 0.0.1
author = DragonHunter
author_email = 
description = An event package for making packages
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thatrandomperson5/pkgEvents
project_urls =
    Bug Tracker = https://github.com/thatrandomperson5/pkgEvents/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src